# Coder

./: README.md
Phase 01/: pyproject.toml
Phase 01/app/: .env  main.py
Phase 01/app/api/: __init__.py
Phase 01/app/database/: __init__.py  db.py
Phase 01/app/models/: __init__.py  tasks.py
Phase 01/app/schemas/: __init__.py
Phase 01/app/todos/: routes.py  schemas.py  todo_data.py
